force-app/main/default/objects/SalesPlanning__c/SalesPlanning__c.object-meta.xml
<CustomObject>
    <label>Absatzplanung</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Absatzplanung</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>