force-app/main/default/objects/SalesPlanning__c/fields/ActualNetProceeds__c.field-meta.xml
<CustomField>
    <fullName>ActualNetProceeds__c</fullName>
    <label>Actual Net proceeds</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>