force-app/main/default/objects/SalesPlanning__c/fields/ActualSoldAmount__c.field-meta.xml
<CustomField>
    <fullName>ActualSoldAmount__c</fullName>
    <label>Actual sold amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>