force-app/main/default/objects/SalesPlanning__c/fields/BusinessArea__c.field-meta.xml
<CustomField>
    <fullName>BusinessArea__c</fullName>
    <label>Business Area/Product Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZZ - High Carbon</fullName>
                <label>Drawing Grades - High Carbon</label>
            </value>
            <value>
                <fullName>ZZ - Low Carbon - B10</fullName>
                <label>Drawing Grades - Low Carbon - B10</label>
            </value>
            <value>
                <fullName>ZZ - Low Carbon</fullName>
                <label>Drawing Grades - Low Carbon (w.o. B10)</label>
            </value>
            <value>
                <fullName>ZZ - Tyre Cord</fullName>
                <label>Drawing Grades - Tyre Cord</label>
            </value>
            <value>
                <fullName>ZZ - Welding Wire (SZW)</fullName>
                <label>Drawing Grades - Welding Wire</label>
            </value>
            <value>
                <fullName>ZW</fullName>
                <label>Bearing Steel</label>
            </value>
            <value>
                <fullName>ZK</fullName>
                <label>Cold Heading</label>
            </value>
            <value>
                <fullName>ZM</fullName>
                <label>Forging Steel</label>
            </value>
            <value>
                <fullName>ZS</fullName>
                <label>Free Cutting Steel (SZO)</label>
            </value>
            <value>
                <fullName>ZF</fullName>
                <label>Spring Steel</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>Across business Area</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>