force-app/main/default/objects/SalesPlanning__c/fields/DeltaNetProceeds__c.field-meta.xml
<CustomField>
    <fullName>DeltaNetProceeds__c</fullName>
    <label>Delta Net proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>