force-app/main/default/objects/SalesPlanning__c/fields/ForecastLevel__c.field-meta.xml
<CustomField>
    <fullName>ForecastLevel__c</fullName>
    <label>Forecast Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Area/Product Group</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>