force-app/main/default/objects/SalesPlanning__c/fields/ForecastNetProceeds__c.field-meta.xml
<CustomField>
    <fullName>ForecastNetProceeds__c</fullName>
    <label>Forecast Net proceeds</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>