force-app/main/default/objects/SalesPlanning__c/fields/ForecastSoldAmount__c.field-meta.xml
<CustomField>
    <fullName>ForecastSoldAmount__c</fullName>
    <label>Forecast sold amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>