force-app/main/default/objects/SalesPlanning__c/fields/ForecastTimePoint__c.field-meta.xml
<CustomField>
    <fullName>ForecastTimePoint__c</fullName>
    <label>Forecast Time point</label>
    <required>true</required>
    <type>Date</type>
</CustomField>